2011-11-16  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari_falcon.c, sound_falcon.c, falcon/sound_dma.S: Fix Falcon compilation
  errors with MiNTLib 0.59.1 and GCC 4.6.2 (still works with GCC 2.95.3 as
  tested under SpareMiNT).

* atari_basic.c, atari_curses.c, atari_falcon.c, atari_ps2.c, atari_x11.c,
  sound_falcon.c, sound_oss.c, sound.h, android/jni/sound.c, dos/atari_vga.c,
  dos/sound_dos.c, sdl/main.c, sdl/sound.[ch], win32/atari_win32.c,
  win32/sound.c, wince/port/atari_wince.c, wince/port/sound.c: Make
  Sound_Initialise fail gracefully instead of segfaulting when an option
  argument is missing. Do not initialise sound unnecessarily when the "-help"
  option is given.

* antic.c, atari_curses.c, atari.c, platform.h, ui_basic.c, ui.c: Cleanup:
  gather all declarations of curses_* functions together in platform.h.

* atari.c, configure.ac, devices.c, log.c, monitor.c, screen.c, sio.c,
  sound_oss.c, ui_basic.c, ui.c: Cleanup to make the ncurses target build with
  more restrictive CFLAGS (same as the sdl target).


2011-11-11  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* af80.[ch], atari.c, cartridge.[ch], devices.[ch], ide.[ch], input.c,
  pbi_bb.[ch], pbi_mio.[ch], pbi_proto80.[ch], pbi_xld.[ch], pbi.[ch],
  sdl/video.c: Add or fix Exit functions for files/resources that were not
  _explicitely_ closed/freed on exit.
  Add call to Atari800_ErrExit also when commandline-parsing fails.
  Previously when starting the dosvga target with "atari800 -artif",
  the emulator would exit without uninitialising VGA, leaving mess on screen.

* amiga/amiga.c, dc/atari_dc.c: Fix Platform_Initialise() not returning
  a value.


2011-11-04  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* monitor.c: Fix a memory leak - buffer allocated by readline() should be
  freed by user.

* configure.ac: Clean-up of SDL detection - restore the "Don't redefine main"
  snippet that got mistakenly deleted in revisions 1.108-1.109.
